@@ -329,7 +329,7 @@ public class ONPRC_EHRController extends SpringActionController
 
                     new SqlExecutor(ti.getSchema()).execute(sql);
 
-                    logger.info(counter + " total case numbers added.");
+                    logger.info("{} total case numbers added.", counter);
 
                     sql = new SQLFragment().append(sqlStart);
                 }
@@ -345,7 +345,7 @@ public class ONPRC_EHRController extends SpringActionController
             ret.put("rows", counter);
             ret.put("success", true);
 
-            logger.info("Case number update completed. " + counter + " total case numbers updated.");
+            logger.info("Case number update completed. {} total case numbers updated.", counter);
 
 
             return new ApiSimpleResponse(ret);
@@ -430,7 +430,7 @@ public class ONPRC_EHRController extends SpringActionController
             sql.add(form.getSnomed());
 
             List<String> results = new SqlSelector(QueryService.get().getUserSchema(getUser(), getContainer(), "ehr_lookups").getDbSchema(), sql).getArrayList(String.class);
-            return results.isEmpty() ? null : results.get(0);
+            return results.isEmpty() ? null : results.getFirst();
         }
 
         private Map<String, Object>[] findSnomed(SnomedForm form)
