@@ -39,7 +39,7 @@ public class ChangeProjectedReleaseDateButton extends MarkCompletedButton
         String pkColName = null;
         if (ti.getPkColumnNames() != null && ti.getPkColumnNames().size() == 1)
         {
-            pkColName = ti.getPkColumnNames().get(0);
+            pkColName = ti.getPkColumnNames().getFirst();
         }
 
         return "EHR.window.MarkCompletedWindow.buttonHandler(dataRegionName, " + PageFlowUtil.jsString(_schemaName) + ", " + PageFlowUtil.jsString(_queryName) + ", " + PageFlowUtil.jsString(xtype) + ", " + PageFlowUtil.jsString(pkColName) + ", false, 'projectedRelease');";
